--- a/PlurtechTest/PlurtechTest.csproj
+++ b/PlurtechTest/PlurtechTest.csproj
@@ -63,6 +63,7 @@
   <ItemGroup>
     <Content Include="css\bootstrap.css" />
     <Content Include="default.aspx" />
+    <Content Include="img\PLURTECH.jpg" />
     <Content Include="js\bootstrap.js" />
     <Content Include="js\jquery-1.10.2.js" />
     <Content Include="Login.aspx" />
@@ -102,7 +103,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="img\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\PublishProfiles\FS.pubxml" />
